# helloNdk

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hellondk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/: main-activity-jni.cpp  main-activity-jni.hpp
app/src/main/cpp/source/: hello-ndk.cpp  hello-user.cpp  hello.hpp
app/src/main/java/com/example/hellondk/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hellondk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
